<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android">

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/android1"
        android:scaleType="centerCrop"/>
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".Welcome"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/radio_button_and_text_view_container"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="5"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="20dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/welcome"
                android:textSize="35sp"
                android:textColor="@android:color/white"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcomeStringNameMessage"
                android:textSize="25sp"
                android:textColor="@android:color/white"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:paddingLeft="5dp"
                android:layout_marginTop="5dp"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:paddingLeft="5dp"
                android:layout_marginTop="5dp">
                <TextView
                    android:id="@+id/name_lbl"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:text="@string/name"
                    android:textSize="14sp"
                    android:textColor="@android:color/white"
                    android:layout_height="wrap_content" />
                <EditText
                    android:id="@+id/name_view"
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:hint="@string/example"
                    android:textColorHint="@android:color/darker_gray"
                    android:inputType="textCapWords"
                    android:textSize="14sp"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"
                    android:paddingLeft="5dp"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcomeStringMessage"
                android:textSize="25sp"
                android:textColor="@android:color/white"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:paddingLeft="5dp"
                android:layout_marginTop="10dp"
                />
            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:paddingLeft="5dp">

                <RadioButton
                    android:id="@+id/rad_android"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/android_category"
                    android:paddingLeft="10dp"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:layout_margin="10dp"
                    android:textColor="@android:color/white"/>
                <RadioButton
                    android:id="@+id/rad_web"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:text="@string/web_development_category"
                    android:layout_margin="10dp"
                    android:textColor="@android:color/white"/>

            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/button_container"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">
            <Button
                android:id="@+id/btn_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/start"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:textColor="@color/btnColor"
                android:background="@drawable/round_button"
                />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>

</ScrollView>
