<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_height="wrap_content"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".Display">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/android"
            android:scaleType="centerCrop"/>

        <TextView

            android:id="@+id/display_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:textSize="24sp"
            android:text="@string/result_input_name"/>

        <TextView
            android:id="@+id/display_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textColor="@android:color/black"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_below="@+id/display_name"
            android:text="@string/result_input_category"/>

        <TextView
            android:id="@+id/display_score"
            android:layout_below="@+id/display_category"
            android:layout_width="wrap_content"
            android:textSize="24sp"
            android:textColor="@android:color/black"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:layout_height="wrap_content"
            android:text="@string/result_input_score"/>

        <View
            android:layout_above="@+id/display_right_answers"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@android:color/white"/>
        <View
            android:layout_below="@+id/display_result"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@android:color/white"/>



        <TextView
            android:id="@+id/display_right_answers"
            android:layout_below="@+id/display_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:textColor="@android:color/white"
            android:layout_marginRight="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/result_input_correct"/>

        <TextView
            android:id="@+id/display_result"
            android:layout_below="@+id/display_right_answers"
            android:layout_width="wrap_content"
            android:textSize="14sp"
            android:textColor="@android:color/white"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_height="wrap_content"
            android:text="@string/result_input_answers"/>


    </RelativeLayout>

</ScrollView>
